--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,14 @@ body {
     text-wrap: balance;
   }
 }
+
+
+@layer base {
+  .font-outline-2 {
+    -webkit-text-stroke: 2px white;
+  }
+
+  .font-outline-4 {
+    -webkit-text-stroke: 4px white;
+  }
+}
